jasper/force-app/main/default/objects/Assignment_Group_Member__c/fields/Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Group__c</fullName>
    <label>Assignment Group</label>
    <referenceTo>Assignment_Group__c</referenceTo>
    <relationshipLabel>Assignment Group Members</relationshipLabel>
    <relationshipName>Assignment_Group_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>