jasper/force-app/main/default/objects/Assignment_Group_Member__c/fields/Assignment_Id__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Id__c</fullName>
    <label>Assignment Id</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>