jasper/force-app/main/default/objects/Assignment_Group_Member__c/fields/Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>