jasper/force-app/main/default/objects/Assignment_Group_Member__c/fields/Last_Allocated_RRID__c.field-meta.xml
<CustomField>
    <fullName>Last_Allocated_RRID__c</fullName>
    <formula>Assignment_Group__r.Last_Allocated_RRid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Allocated RRID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>