jasper/force-app/main/default/objects/Assignment_Group_Member__c/fields/Max_Case_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Max_Case_Per_Day__c</fullName>
    <label>Max Case Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>