jasper/force-app/main/default/objects/Assignment_Group_Member__c/fields/Max_Sobject_Assignment_Count__c.field-meta.xml
<CustomField>
    <fullName>Max_Sobject_Assignment_Count__c</fullName>
    <label>Max Sobject Assignment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>