jasper/force-app/main/default/objects/Assignment_Group_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Assignment_Group__c</columns>
    <columns>Assignment_Id__c</columns>
    <columns>BreakTime_Started__c</columns>
    <columns>Group_Member__c</columns>
    <columns>Last_Allocated_RRID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>